[metadata]
name = netsu-plugin-connectivitycheck
license = GPLv3
author = Petr Horacek
author_email = phoracek@redhat.com
url = https://www.github.com/netsu-project/netsu-plugin-connectivitycheck

[files]
packages =
  netsu_plugin_connectivitycheck

[entry_points]
netsu.plugins.definitions_updates:
  500_connectivitycheck = netsu_plugin_connectivitycheck.definitions:update
